force-app/main/default/objects/WorkType__c/WorkType__c.object-meta.xml
<CustomObject>
    <label>WorkType</label>
    <nameField>
        <label>WorkType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>