force-app/main/default/objects/WorkType__c/fields/closedate__c.field-meta.xml
<CustomField>
    <fullName>closedate__c</fullName>
    <label>closedate</label>
    <type>Date</type>
</CustomField>