force-app/main/default/objects/WorkType__c/fields/Is_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Is_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inspection</label>
    <type>Checkbox</type>
</CustomField>