force-app/main/default/objects/WorkType__c/fields/jenkins__c.field-meta.xml
<CustomField>
    <fullName>jenkins__c</fullName>
    <description>sfdc jenkins deployment test</description>
    <label>jenkins</label>
    <length>80</length>
    <type>Text</type>
</CustomField>