force-app/main/default/objects/WorkType__c/fields/MailID__c.field-meta.xml
<CustomField>
    <fullName>MailID__c</fullName>
    <label>MailID</label>
    <type>Email</type>
</CustomField>