force-app/main/default/objects/WorkType__c/fields/numbertest__c.field-meta.xml
<CustomField>
    <fullName>numbertest__c</fullName>
    <label>numbertest</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>