force-app/main/default/objects/WorkType__c/validationRules/numbertest.validationRule-meta.xml
<ValidationRule>
    <fullName>numbertest</fullName>
    <active>true</active>
    <errorConditionFormula>numbertest__c &lt;0</errorConditionFormula>
    <errorMessage>must be &gt;= 0</errorMessage>
</ValidationRule>